--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/inline-edit/inline-edit.component.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/inline-edit/inline-edit.component.html
@@ -46,6 +46,16 @@
     </mat-error>
   </mat-form-field>
 
+  <mat-form-field *ngIf="column === 'serial_no'">
+    <input
+      type="text"
+      placeholder="Enter a Serial No"
+      matInput
+      name="serial_no"
+      [(ngModel)]="serial_no"
+    />
+  </mat-form-field>
+
   <div class="actions">
     <button mat-button type="button" color="primary" (click)="onCancel()">
       CANCEL
