--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -47,7 +47,7 @@
         <ion-grid class="ion-no-padding">
           <ion-row class="align">
             <ion-col>
-              <mat-form-field class="example-full-width">
+              <mat-form-field class="example-half-width">
                 <input
                   matInput
                   placeholder="Naming Series"
@@ -57,7 +57,7 @@
               </mat-form-field>
             </ion-col>
             <ion-col>
-              <mat-form-field class="example-full-width">
+              <mat-form-field class="example-half-width">
                 <input
                   matInput
                   required
@@ -70,10 +70,10 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
-          </ion-row>
-          <ion-row class="align">
+         
+
             <ion-col>
-              <mat-form-field class="example-full-width">
+              <mat-form-field class="example-half-width">
                 <input
                   required
                   type="text"
@@ -89,13 +89,16 @@
                   [displayWith]="getOptionText"
                   (optionSelected)="customerChanged($event.option.value)"
                 >
+           
                   <mat-option
-                    *ngFor="let option of filteredCustomerList | async"
+                    *ngFor="let option of filteredCustomerList | async "
                     [value]="option"
                   >
                     {{ option.customer_name }}
-                    <small class="text-muted"> {{ option.name}} </small>
+                    <small class="text-muted"> {{option.customer_name}} </small>
                   </mat-option>
+             
+               
                 </mat-autocomplete>
                 <mat-error *ngIf="f.customer.hasError('falseValse')">
                   You should select a value from dropdown only.
@@ -106,8 +109,10 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
+
+
             <ion-col>
-              <mat-form-field class="example-full-width">
+              <mat-form-field class="example-half-width">
                 <input
                   required
                   matInput
@@ -127,10 +132,9 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
-          </ion-row>
-          <ion-row class="align">
-            <ion-col size-md="6">
-              <mat-form-field class="example-full-width">
+        
+            <ion-col>
+              <mat-form-field class="example-half-width">
                 <input
                   required
                   type="text"
@@ -161,8 +165,11 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
-            <ion-col>
-              <mat-form-field class="example-full-width">
+
+
+
+            <ion-col >
+              <mat-form-field class="example-half-width">
                 <input
                   required
                   matInput
@@ -189,18 +196,10 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
-          </ion-row>
-          <ion-row>
+         
+       
             <ion-col>
-              <mat-form-field class="mat-input-wrapper" appearance="none">
-                <mat-checkbox matInput formControlName="campaign">
-                  Campaign Invoice
-                </mat-checkbox>
-                <input matInput disabled />
-              </mat-form-field>
-            </ion-col>
-            <ion-col>
-              <mat-form-field class="example-full-width">
+              <mat-form-field class="example-half-width">
                 <input
                   matInput
                   placeholder="Remaining Balance"
@@ -215,16 +214,15 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
-          </ion-row>
-          <ion-row>
+         
             <ion-col size-md="6">
-              <mat-form-field class="example-full-width">
+              <mat-form-field class="example-half-width">
                 <mat-label>Remarks</mat-label>
                 <textarea matInput formControlName="remarks"></textarea>
               </mat-form-field>
             </ion-col>
-            <ion-col size-md="6">
-              <mat-form-field class="example-full-width">
+            <ion-col >
+              <mat-form-field class="example-half-width">
                 <input
                   required
                   type="text"
@@ -251,11 +249,19 @@
                 </mat-error>
               </mat-form-field>
             </ion-col>
+            <ion-col>
+              <mat-form-field class="mat-input-wrapper" appearance="none">
+                <mat-checkbox matInput formControlName="campaign">
+                  Campaign Invoice
+                </mat-checkbox>
+                <input matInput disabled />
+              </mat-form-field>
+            </ion-col>
           </ion-row>
         </ion-grid>
       </ion-card-content>
     </ion-card>
-    <ion-card>
+    <!-- <ion-card>
       <ion-card-header>
         <ion-card-title>
           <ion-text color="tertiary"> Address </ion-text>
@@ -287,14 +293,14 @@
           No address assigned to customer
         </ion-text>
       </ion-card-content>
-    </ion-card>
+    </ion-card> -->
   </form>
 
   <form [formGroup]="salesInvoiceItemsForm">
     <ion-grid>
       <ion-row>
         <ion-col>
-          <mat-form-field class="example-full-width">
+          <mat-form-field class="example-half-width">
             <mat-label>Filter from</mat-label>
             <mat-select formControlName="filterKey">
               <mat-option *ngFor="let option of filterOptions" [value]="option"
@@ -307,7 +313,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              placeholder="Value"
+              placeholder="Search Item"
               formControlName="filterValue"
               (keyup.enter)="setFilter()"
             />
