modify:item-cards-ui

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
@@ -51,5 +51,10 @@ mat-cell {
 }
 
 .grid-card {
-  height: 95%;
+  height: 80%;
+  width: 80%;
+}
+.item-image {
+  width: 150px;
+  height: 150px;
 }
