modify-Pos-ui:add buttons, anchor tags,

--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.scss
@@ -58,3 +58,9 @@ mat-cell {
   width: 150px;
   height: 150px;
 }
+
+.draft-table {
+  padding: 15px;
+  text-align: left !important;
+  width: 100%;
+}
