--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/add-pos-invoice.html
@@ -623,8 +623,8 @@
           <ion-card-content>
             <mat-table  [dataSource]="dataSource2">
               <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsItems" >
-                <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-                <td mat-cell *matCellDef="let row"> {{row[column]}} </td>
+                <th mat-header-cell class="draft-table" *matHeaderCellDef>{{column}}</th>
+                <td mat-cell class="draft-table" *matCellDef="let row"> <a href="#">{{row[column]}}</a>  </td>
               </ng-container>        
               
               <mat-header-row *matHeaderRowDef="displayedColumnsItems; sticky: true"></mat-header-row>
@@ -911,7 +911,15 @@
             </ion-card-content>
           </ion-card>
           </form>
-
+      </ion-col>
+      <ion-col size="9">
+          <div>
+            <div style='float: right;'>
+              <button mat-stroked-button (click)="makeDraft()" color="primary">Make Draft</button>
+              &nbsp;&nbsp;
+              <button mat-stroked-button (click)="submitPayment()" color="primary">Pay and Submit</button>
+            </div>
+          </div>
       </ion-col>
     </ion-row>
   </ion-grid>
