--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/payment-dialogue/payment-dialogue.component.scss
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/payment-dialogue/payment-dialogue.component.scss
@@ -2,6 +2,14 @@
     float: right;
 }
 
-.grid-container {
-    display: grid;
+.numpad{
+    border: 1px solid gray;
+    background-color: whitesmoke;
+    text-align: center;
+    height: 40px; 
+    width: 100%;
+}
+
+.numpad-key{
+    border: 1px solid gray;
 }
