--- a/packages/rma-pos/src/app/sales-ui/add-sales-invoice/customer-create-dialog/customer-create-dialog.component.html
+++ b/packages/rma-pos/src/app/sales-ui/add-sales-invoice/customer-create-dialog/customer-create-dialog.component.html
@@ -40,15 +40,33 @@
 
       <mat-form-field class="example-full-width">
         <input
-          matInput
           required
-          placeholder="Customer Group"
+          type="text"
+          placeholder="Select Customer Group"
+          matInput
           formControlName="customerGroup"
+          (focusout)="validateInput(f.customerGroup, customerGroupList)"
+          [matAutocomplete]="customerGroup"
         />
-        <mat-error *ngIf="f.customerGroup.hasError('required')">
-          customer Group is <strong>required</strong>
+        <mat-autocomplete
+          autoActiveFirstOption
+          #customerGroup="matAutocomplete"
+  
+        >
+          <mat-option
+            *ngFor="let customerGroup of customerGroupList"
+            [value]="customerGroup.name"
+          >
+            {{ customerGroup.name }}
+          </mat-option>
+        </mat-autocomplete>
+        <mat-error *ngIf="f.customerGroup.hasError('falseValse')">
+          You should select a value from dropdown only.
+          <strong>'{{f.customerGroup.value}}'</strong> is not allowed.
         </mat-error>
-      </mat-form-field><br />
+      </mat-form-field>
+      <br /><br />
+
 
     <mat-form-field class="example-full-width">
       <input
@@ -79,116 +97,62 @@
     </mat-form-field>
     <br /><br />
 
-    <mat-form-field class="example-full-width">
-      <input
-        matInput
-        required
-        placeholder="Excel Fixed Credit Limit"
-        formControlName="excelFixedCreditLimit"
-      />
-      <mat-error *ngIf="f.excelFixedCreditLimit.hasError('required')">
-        excelFixedCreditLimit is <strong>required</strong>
-      </mat-error>
-    </mat-form-field><br />
-
     <h5>primary Contact Details</h5>
-    <mat-form-field class="example-full-width">
-      <input
-        matInput
-        required
-        placeholder="Email Id"
-        formControlName="emailId"
-      />
-      <mat-error *ngIf="f.emailId.hasError('required')">
-        Email id is <strong>required</strong>
-      </mat-error>
-    </mat-form-field><br />
-    <mat-form-field class="example-full-width">
-      <input
-        matInput
-        required
-        placeholder="Mobile No"
-        formControlName="mobileNo"
-      />
-      <mat-error *ngIf="f.mobileNo.hasError('required')">
-        Mobile No is <strong>required</strong>
-      </mat-error>
-    </mat-form-field><br />
-    <h5>Primary Address Details </h5>
     <ion-grid>
       <ion-row>
-      <ion-col>
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            required
-            placeholder="Address Line 1"
-            formControlName="addressLine1"
-          />
-          <mat-error *ngIf="f.addressLine1.hasError('required')">
-            Address Line 1 is <strong>required</strong>
-          </mat-error>
-        </mat-form-field><br />
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            required
-            placeholder="Address Line 2"
-            formControlName="addressLine2"
-          />
-          <mat-error *ngIf="f.addressLine2.hasError('required')">
-            Address Line 2 is <strong>required</strong>
-          </mat-error>
-        </mat-form-field><br />
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            required
-            placeholder="ZIP Code"
-            formControlName="zipCode"
-          />
-          <mat-error *ngIf="f.zipCode.hasError('required')">
-            Zipe Code is <strong>required</strong>
-          </mat-error>
-        </mat-form-field><br />
-      </ion-col>
-      <ion-col>
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            required
-            placeholder="City"
-            formControlName="city"
-          />
-          <mat-error *ngIf="f.city.hasError('required')">
-            City is <strong>required</strong>
-          </mat-error>
-        </mat-form-field><br />
+        <ion-col>
+          <mat-form-field class="example-full-width">
+            <input
+              matInput
+              required
+              placeholder="Mobile No"
+              formControlName="mobileNo"
+            />
+            <mat-error *ngIf="f.mobileNo.hasError('required')">
+              Mobile No is <strong>required</strong>
+            </mat-error>
+          </mat-form-field><br />
 
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            required
-            placeholder="State"
-            formControlName="state"
-          />
-          <mat-error *ngIf="f.state.hasError('required')">
-            State is <strong>required</strong>
-          </mat-error>
-        </mat-form-field><br />
+          <mat-form-field class="example-full-width">
+            <input
+              matInput
+              required
+              placeholder="Address"
+              formControlName="address"
+            />
+            <mat-error *ngIf="f.address.hasError('required')">
+              Address is <strong>required</strong>
+            </mat-error>
+          </mat-form-field><br />
 
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            required
-            placeholder="Country"
-            formControlName="country"
-          />
-          <mat-error *ngIf="f.country.hasError('required')">
-            country is <strong>required</strong>
-          </mat-error>
-        </mat-form-field><br />
-      </ion-col>
+        </ion-col>
+        <ion-col>
+          <mat-form-field class="example-full-width">
+            <input
+              matInput
+              required
+              placeholder="Email Id"
+              formControlName="emailId"
+            />
+            <mat-error *ngIf="f.emailId.hasError('required')">
+              Email id is <strong>required</strong>
+            </mat-error>
+          </mat-form-field><br />
+
+          <mat-form-field class="example-full-width">
+            <input
+              matInput
+              required
+              placeholder="City"
+              formControlName="city"
+            />
+            <mat-error *ngIf="f.city.hasError('required')">
+              City is <strong>required</strong>
+            </mat-error>
+          </mat-form-field><br />
+
+
+        </ion-col>
       </ion-row>
     </ion-grid>
   
